--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
+		<header>
 		<div class = "container-fluid text-center">
 			<div class = "row" id = "head">
 				<div class = "col-sm-12">
-						<img src = "img/apple-touch-icon.png">
+						<img src = "img/apple-touch-icon.png" width="90" height="100">
 						<h1>Bootstrap</h1>
 						<p>Designed for everyone, everywhere.</p>
 						</br>
 				</div>
 			</div>
 		</div>
-
+		</header>
 		<nav class="navbar navbar-default">
 			<div class = "navbar-header">
 				      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNav">
@@ -98,7 +99,7 @@
      					<article class="panel-body">
      							<header class="panel-heading">
        								 <a href="#"><h2>New Bootstrap 4 Alpha</h2></a>
-       									 <img src = "img/bootstrap-4-is-coming.png" width = "420" height = "200" > </br>
+       									 <img src = "img/bootstrap-4-is-coming.png" width = "420" height = "200" id = "img1"> </br>
        										 <small>08 Dec 2015</small>
       							</header>
       							<p id="p1">Bootstrap 4 alpha 2 is now available. Since our last release, nearly 100 people have pushed over 900 commits to v4 and we’ve closed over 400 issues and pull requests. Those numbers are outrageously awesome to see, and we’ve still got a ton of work ahead of us this year for v4.
@@ -161,7 +162,7 @@
      					<article class="panel-body">
      							<header class="panel-heading">
        								 <a href="#"><h2>Bootstrap 3.3.6 released</h2></a>
-       									 <img src = "img/Screen-Shot-2015-08-24-at-2.54.45-PM.png" width = "420" height = "200" > </br>
+       									 <img src = "img/Screen-Shot-2015-08-24-at-2.54.45-PM.png" width = "420" height = "200" id = "img2"> </br>
        										 <small>24 Nov 2015</small>
       							</header>
       							<p id="p1">Bootstrap 3.3.6 is here! It’s a long overdue release that addresses dozens of CSS bug fixes and documentation updates. We’ve had over 180 commits and 100 closed issues and pull requests from nearly 30 contributors since our last release. Woohoo!</p>
@@ -191,6 +192,11 @@
 								
    						 </article>
   					</section>
+				</div>
+				<div class = "col-sm-4">
+					<section class = "panel panel-default" id="share2">
+						<img src = "img/twitterbootstraptutorial-300x300.jpg">
+					</section>
 				</div>
 				<div class ="col-sm-8">
 						<section class="panel panel-default">
@@ -229,6 +235,11 @@
 								
    						 </article>
   					</section>
+				</div>
+					<div class = "col-sm-4">
+					<section class = "panel panel-default" id="share2">
+						<img src = "img/twitterbootstraptutorial-300x300.jpg">
+					</section>
 				</div>
 			</div>
 			</br>
